--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="color: #ffffff;">Katie Hennells</h1>
-								<p style="color: #ffffff;">I am a senior in the College of Engineering at the University of Michigan<br/> studying Computer Science.
+								<p style="color: #ffffff;">I am a senior in the College of Engineering at the University of Michigan<br/> studying Computer Science
 								</p>
 							</div>
 						</div>
@@ -56,16 +56,24 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work Experience</h2>
-								<span class="image main"><img src="images/skyline_animated.svg" alt="" style="padding: 4px;"/></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<span class="image main"><img src="images/skyline_animated.svg" alt="" /></span>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h3 class="major">CME Group</h3>
+								<h4>Software Engineering Intern</h4>
+								<span class="image main"><img src="images/cmegroup.jpg" alt="" style="padding: 4px;"/></span>
+								<p>During the summer between my junior and senior year of college, I interned at Chicago Mercetile Exchange Group in Chicago, IL. </p>
+								<h3 class="major">PolySync</h3>
+								<h4>Software Engineering Intern - TechLabs</h4>
+								<span class="image main"><img src="images/polysync.jpg" alt=""/></span>
+								<span class="image main"><img src="images/polysync2.jpg" alt=""/></span>
+								<p>PolySync is a start-up in the autonomous vehicle space focused creating a middleware that tunes sensors and actuators (including LiDAR, Radar, and GPS) to the vehicles physical controls (such as steering, brake, and throttle). They are a part of the mobility start-up incubator, TechLab, in the Center for Entrepreneurship at the University of Michigan.
+								</p>
+								<p>My first two semesters with PolySync I worked with their lead software engineer and three other dedicated University of Michigan students. We developed a waypoint following algorithm for the Lincoln MKZ equiped with sensors, actuators, and PolySync's software. During this time, we also isolated a configuration bottleneck in PolySync's software that slowed down development for their clients. This semester I am working with a new team of interns to integrate this management system into PolySync's current application.
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">Activities</h2>
 								<h3 class="major">CS KickStart</h3>
+								<h4>Co-founder, Program Director</h4>
 								<span class="image main"><img src="images/2016cohort.png" alt="" /></span>
 								<p>For the past two years, I have been working with four other incredible women to improve the enrollment and persistence of women in UofM’s computer science department. To do this, we designed a week long introduction to CS for incoming freshmen women, <a href="cskickstart.eecs.umich.edu">CSKickStart</a>. Our motivation stemmed from our own experiences, and data we gathered from a survey of the second programming class at UofM.
 								</p>
@@ -77,9 +85,12 @@
 								</ul>
 								In creating the camp, some of the most difficult obstacles came from our peers. Professors, and students alike would tell us that the stigma isn’t real, and CS KickStart wouldn’t make a difference. Despite this, we persisted. I am extremely proud of the outcome of the camp. We received positive feedback from every single one of our participants, many of whom have decided to further their career in technology. We gave the participants a community, confidence, and inspiration. It is extremely rewarding to have seen all our hardwork come together and have such a positive experience on the cohort. I hope to continue and expand CS KickStart, and erase the negative stereotype of women in technology.</p>
 								<h3 class="major">Computing CARES</h3>
+								<h4>Instructional Aide</h4>
 								<p>Computing CARES is a Third Century Iniative at the University of Michigan aimed at improving the retention of women in computing. I recently became apart of this program in August of 2017. My role is to plan interventions in the intro computing classes. Some examples of this include explicitly addressing imposter syndrome, and implicit bias.</p>
 								<p>Additonally we plan extracurricular activities where students can feel comfortable asking questions and recieving help outside the classroom. This coming month we are planning a "Mythbusters" panel with the objective of dispelling rumors within the Computer Science Department.
+								</p>
 								<h3 class="major">GEECS</h3>
+								<h4>Outreach Committee</h4>
 								<p>GEECS stands for "Girls in Electrical Engineering and Computer Science". It is a student organization within the University of Michigan created for the support and success of women in technology. I joined in 2015 after declaring my major and have been involved in the Outreach Committee ever since.</p>
 								<p>The Outreach Committee is in charge of hosting events for elementary and middle school girls interested in technology. We hold two events per semester and teach them skills such as arduinos and coding. It is rewarding to see the students find confidence and inspiration from learning to code.
 								</p> 
