finishing up work experience section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 								<h3 class="major">CME Group</h3>
 								<h4>Software Engineering Intern</h4>
 								<span class="image main"><img src="images/cmegroup.jpg" alt="" style="padding: 4px;"/></span>
-								<p>During the summer between my junior and senior year of college, I interned at Chicago Mercetile Exchange Group in Chicago, IL. </p>
+								<p>During the summer between my junior and senior year of college, I interned at Chicago Mercetile Exchange Group in Chicago, IL. While at CME I got to explore Blockchain technology and its applications to financial services. I was able to work alongside senior developers designing proof of concept projects and do inter-department data aggregation.</p>
+								<p>This was an awesome experience for me becuase I had exposure to so many new types of technology. Including Blockchain application development, new programming langauges, and contributing to the business side of CME. We aimed to design something that would be a single source of information to feed smart contracts on a Blockchain.
+								</p>
 								<h3 class="major">PolySync</h3>
 								<h4>Software Engineering Intern - TechLabs</h4>
 								<span class="image main"><img src="images/polysync.jpg" alt=""/></span>
