--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.png" alt=""/></span>
 								<p>I am a senior in the College of Engineering at the University of Michigan studying Computer Science. </p>
+								<h2 class="major">In the News</h2>
+								<p><a href="http://detroit.cbslocal.com/show/eye-on-the-future/video-3777826-eye-on-the-future-driving-innovation-in-mobility/">Eye On The Future</a></p>
+								<p><a href="https://www.eecs.umich.edu/eecs/about/articles/2017/CS-KickStart-2017.html">CS KickStart 2017</a></p>
+								<p><a href="http://www.eecs.umich.edu/eecs/about/articles/2016/CS_KickStart.html">CS KickStart 2016</a></p>
 								
 							</article>
 
