removes contact page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#about">Activities</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -105,7 +105,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<!-- <article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="mailto:krhenn@umich.edu" enctype="text/plain">
 									<div class="field half first">
@@ -131,7 +131,7 @@
 									<li><a href="https://instagram.com/katiehennells" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://linkedin.com/in/katie-hennells" class="icon fa-linkedin"><span class="label"></span></a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Elements -->
 							<article id="elements">
