updating index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="color: #ffffff;">Katie Hennells</h1>
-								<p style="color: #ffffff;">I am a senior in the College of Engineering at the University of Michigan<br/> studying Computer Science
+								<p style="color: #ffffff;">Senior in the College of Engineering at the University of Michigan<br/> studying Computer Science
 								</p>
 							</div>
 						</div>
@@ -49,7 +49,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.png" alt=""/></span>
-								<p>I am a senior in the College of Engineering at the University of Michigan studying Computer Science. </p>
+								<p>I am a senior in the College of Engineering at the University of Michigan studying Computer Science. I am graduating in Spring of 2018 and pursuing a career in Software Engieering at CME Group.</p>
 								<h2 class="major">In the News</h2>
 								<p><a href="http://detroit.cbslocal.com/show/eye-on-the-future/video-3777826-eye-on-the-future-driving-innovation-in-mobility/">Eye On The Future</a></p>
 								<p><a href="https://www.eecs.umich.edu/eecs/about/articles/2017/CS-KickStart-2017.html">CS KickStart 2017</a></p>
@@ -81,7 +81,7 @@
 								<h3 class="major">CS KickStart</h3>
 								<h4>Co-founder, Program Director</h4>
 								<span class="image main"><img src="images/2016cohort.png" alt="" /></span>
-								<p>For the past two years, I have been working with four other incredible women to improve the enrollment and persistence of women in UofM’s computer science department. To do this, we designed a week long introduction to CS for incoming freshmen women, <a href="cskickstart.eecs.umich.edu">CSKickStart</a>. Our motivation stemmed from our own experiences, and data we gathered from a survey of the second programming class at UofM.
+								<p>For the past two years, I have been working with four other incredible women to improve the enrollment and persistence of women in UofM’s computer science department. To do this, we designed a week long introduction to CS for incoming freshmen women, <a href="http://cskickstart.eecs.umich.edu">CSKickStart</a>. Our motivation stemmed from our own experiences, and data we gathered from a survey of the second programming class at UofM.
 								</p>
 								<p>We analyzed survey data from the second introductory programming class, EECS 280. We found that:
 								<ul>
