--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#about">Activities</a></li>
+								<li><a href="#resume">Resume</a></li>
 								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -102,6 +103,10 @@
 								<p>The Outreach Committee is in charge of hosting events for elementary and middle school girls interested in technology. We hold two events per semester and teach them skills such as coding and using Arduinos. It is rewarding to see the students find confidence and inspiration from learning to code.
 								</p> 
 								<p>During my Junior year I became a mentor for underclassmen involved in GEECS. We meet twice a month during the Fall and Winter semester. During these events the mentees are able to ask questions about CS, Michigan, and life in general in an informal setting. Being a mentor to the underclassmen is very rewarding as I get to see them grow as students and women within the CS department.   
+							</article>
+
+							<article id="resume" style="padding-left: 20px">
+								<object id="resume" width="600" height="800" data="images/KatelynHennells.pdf"></object>
 							</article>
 
 						<!-- Contact -->
