--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1 style="color: #ffffff;">Katie Hennells</h1>
-								<p style="color: #ffffff;">Senior in the College of Engineering at the University of Michigan<br/> studying Computer Science
+								<p style="color: #ffffff;">Software Engineer at CME Group
 								</p>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#about">Activities</a></li>
-								<li><a href="#resume">Resume</a></li>
+								<!-- <li><a href="#resume">Resume</a></li> -->
 								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -50,7 +50,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.png" alt=""/></span>
-								<p>I am a senior in the College of Engineering at the University of Michigan studying Computer Science. I am graduating in Spring of 2018 and pursuing a career in Software Engieering at CME Group.</p>
+								<p>I am a Software Engineer at CME Group working on the Java Applications to help mitigate risk on the market.</p>
 								<h2 class="major">In the News</h2>
 								<p><a href="http://detroit.cbslocal.com/show/eye-on-the-future/video-3777826-eye-on-the-future-driving-innovation-in-mobility/">Eye On The Future</a></p>
 								<p><a href="https://www.eecs.umich.edu/eecs/about/articles/2017/CS-KickStart-2017.html">CS KickStart 2017</a></p>
@@ -61,6 +61,9 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work Experience</h2>
+								<h3 class="major">CME Group</h3>
+								<h4>Software Engineer</h4>
+								<p>Starting in June 2018, I have been a full-time Software Engineer at CME Group under Risk Systems. My current role is under the Triumph Risk Engine which is a Java application that calculates margins. Additionally we supply information to the Risk Dashboard which is consumed by internal Risk Analysts.
 								<h3 class="major">CME Group</h3>
 								<h4>Software Engineering Intern</h4>
 								<span class="image main"><img src="images/cmegroup.jpg" alt="" style="padding: 4px;"/></span>
@@ -82,7 +85,7 @@
 								<h3 class="major">CS KickStart</h3>
 								<h4>Co-founder, Program Director</h4>
 								<span class="image main"><img src="images/2016cohort.png" alt="" /></span>
-								<p>For the past two years, I have been working with four other incredible women to improve the enrollment and persistence of women in UofM’s computer science department. To do this, we designed a week long introduction to CS for incoming freshmen women, <a href="http://cskickstart.eecs.umich.edu">CSKickStart</a>. Our motivation stemmed from our own experiences, and data we gathered from a survey of the second programming class at UofM.
+								<p>During the last two years of college, I worked with four other incredible women to improve the enrollment and persistence of women in UofM’s computer science department. To do this, we designed a week long introduction to CS for incoming freshmen women, <a href="http://cskickstart.eecs.umich.edu">CSKickStart</a>. Our motivation stemmed from our own experiences, and data we gathered from a survey of the second programming class at UofM.
 								</p>
 								<p>We analyzed survey data from the second introductory programming class, EECS 280. We found that:
 								<ul>
@@ -100,14 +103,14 @@
 								<h4>Outreach Committee, Mentor</h4>
 								<span class="image main"><img src="images/mentorship.jpeg"/></span>
 								<p>GEECS stands for "Girls in Electrical Engineering and Computer Science". It is a student organization within the University of Michigan created for the support and success of women in technology. I joined in 2015 after declaring my major and have been involved in the Outreach Committee ever since.</p>
-								<p>The Outreach Committee is in charge of hosting events for elementary and middle school girls interested in technology. We hold two events per semester and teach them skills such as coding and using Arduinos. It is rewarding to see the students find confidence and inspiration from learning to code.
+								<p>The Outreach Committee is in charge of hosting events for elementary and middle school girls interested in technology. We hold three events per semester and teach them skills such as coding and using Arduinos. It is rewarding to see the students find confidence and inspiration from learning to code.
 								</p> 
 								<p>During my Junior year I became a mentor for underclassmen involved in GEECS. We meet twice a month during the Fall and Winter semester. During these events the mentees are able to ask questions about CS, Michigan, and life in general in an informal setting. Being a mentor to the underclassmen is very rewarding as I get to see them grow as students and women within the CS department.   
 							</article>
 
-							<article id="resume" style="padding-left: 20px">
+							<!-- <article id="resume" style="padding-left: 20px">
 								<object id="resume" width="600" height="800" data="images/KatelynHennells.pdf"></object>
-							</article>
+							</article> -->
 
 						<!-- Contact -->
 							<!-- <article id="contact">
@@ -137,248 +140,7 @@
 									<li><a href="https://linkedin.com/in/katie-hennells" class="icon fa-linkedin"><span class="label"></span></a></li>
 								</ul>
 							</article> -->
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button special">Special</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button special icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button special disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="demo-name">Name</label>
-											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-										</div>
-										<div class="field half">
-											<label for="demo-email">Email</label>
-											<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-										</div>
-										<div class="field">
-											<label for="demo-category">Category</label>
-											<div class="select-wrapper">
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-										</div>
-										<div class="field half first">
-											<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-											<label for="demo-priority-low">Low</label>
-										</div>
-										<div class="field half">
-											<input type="radio" id="demo-priority-high" name="demo-priority">
-											<label for="demo-priority-high">High</label>
-										</div>
-										<div class="field half first">
-											<input type="checkbox" id="demo-copy" name="demo-copy">
-											<label for="demo-copy">Email me a copy</label>
-										</div>
-										<div class="field half">
-											<input type="checkbox" id="demo-human" name="demo-human" checked>
-											<label for="demo-human">Not a robot</label>
-										</div>
-										<div class="field">
-											<label for="demo-message">Message</label>
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
-							</article>
+							
 
 					</div>
 
